# holocron

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  init.rs  main.rs  session.rs
src/claude/: mod.rs  process.rs
src/modes/: deep_dive.rs  link.rs  mod.rs
src/notes/: generator.rs  mod.rs  writer.rs
src/til/: generator.rs  mod.rs  writer.rs
